--- a/src/components/Product/style.css
+++ b/src/components/Product/style.css
@@ -41,7 +41,7 @@ body {
   height: 5vh;
   border: none;
   outline: none;
-  background-color: #b069f1;
+  background-color: #3a3d46;
   border-radius: 10px;
   font-weight: bold;
   margin-top: 10px;
