--- a/src/components/Section/style.css
+++ b/src/components/Section/style.css
@@ -6,7 +6,7 @@ section {
   display: flex;
   width: 100%;
   height: 5vh;
-  background-color: #9754d6;
+  background-color: #f1f5f2;
 }
 
 .category-wraper {
@@ -15,7 +15,7 @@ section {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  width: 60%;
+  width: 90%;
   height: 5vh;
 }
 
@@ -27,8 +27,8 @@ section {
 }
 
 .category p {
-  font-weight: bold;
-  color: #ffffff;
+  font-size: 12px;
+  color: #000000;
 }
 
 .category p:hover {
