--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,6 +6,14 @@
   padding-right: 10%;
 }
 
+.container-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 15vh;
+}
+
 .small-column {
   width: 25%;
 }
