--- a/src/pages/UserPage.css
+++ b/src/pages/UserPage.css
@@ -136,7 +136,7 @@ body {
   outline: none;
   border: none;
   color: #ffffff;
-  background-color: #b069f1;
+  background-color: #3a3d46;
   border-radius: 10px;
 }
 
