--- a/src/pages/ProductForm.css
+++ b/src/pages/ProductForm.css
@@ -1,112 +1,112 @@
-.form-container {
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #f4f7fb;
+  margin: 0;
+  padding: 0;
+}
+
+.product-form-container {
   max-width: 800px;
-  margin: 2% auto;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 40px auto;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.form-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+h3 {
+  font-size: 24px;
   margin-bottom: 20px;
-}
-
-.back-icon {
-  cursor: pointer;
-  color: #007bff;
-  font-size: 2rem;
-}
-
-h2 {
-  font-size: 1.8rem;
-  font-weight: bold;
   color: #333;
-}
-
-.product-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.input-group {
-  margin-bottom: 20px;
-}
-
-.input-group label {
-  font-size: 1rem;
-  color: #555;
-  margin-bottom: 8px;
-}
-
-.input-field {
-  width: 100%;
-  padding: 10px;
-  font-size: 1rem;
-  border-radius: 6px;
-  border: 1px solid #ddd;
-  background-color: #fff;
-  transition: border-color 0.3s ease;
-}
-
-.input-field:focus {
-  border-color: #007bff;
-  outline: none;
-}
-
-textarea.input-field {
-  height: 120px;
-  resize: none;
-}
-
-.file-input {
-  padding: 10px;
-}
-
-.form-actions {
-  display: flex;
-  justify-content: center;
-}
-
-.submit-btn {
-  padding: 12px 25px;
-  font-size: 1.2rem;
-  color: #fff;
-  background-color: #007bff;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.submit-btn:hover {
-  background-color: #0056b3;
-}
-
-.submit-btn:active {
-  background-color: #003f7f;
-}
-
-.image-preview-container {
-  margin-top: 20px;
   text-align: center;
 }
 
-.image-preview {
+.product-input {
   width: 100%;
-  max-width: 300px;
-  height: auto;
+  padding: 12px;
+  margin: 10px 0;
   border-radius: 8px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  font-size: 16px;
+  transition: border-color 0.3s ease;
+}
+
+.product-input:focus {
+  border-color: #3a3d46;
+  outline: none;
+  background-color: #fff;
+}
+
+/* Estilos para o preview da imagem */
+.image-preview-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.image-preview {
+  width: 80px;
+  height: 80px;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 .delete-image-btn {
   background: none;
   border: none;
-  color: red;
-  font-size: 20px;
   cursor: pointer;
-  margin-top: 10px;
+  color: #ff4d4d;
+  font-size: 24px;
+}
+
+.product-container-button {
+  display: flex;
+  justify-content: center;
+}
+
+.product-btn-form {
+  padding: 12px 30px;
+  background-color: #3a3d46;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.product-btn-form:hover {
+  background-color: #3a3d46;
+}
+
+@media (max-width: 768px) {
+  .product-form-container {
+    padding: 15px;
+  }
+
+  .product-input {
+    font-size: 14px;
+    padding: 10px;
+  }
+
+  .product-btn-form {
+    font-size: 16px;
+    padding: 10px 25px;
+  }
+
+  .image-preview-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-preview {
+    width: 60px;
+    height: 60px;
+  }
+
+  .delete-image-btn {
+    margin-top: 10px;
+  }
 }
